[workspace]
members = [
    "crates/common", "crates/flp",
]

resolver = "2"

[workspace.dependencies]
serde = {version = "1.0.228"}
serde_json = {version = "1.0.0"}
tokio = { version = "1.48.0", features = ["full"] }
ureq = { version = "3.1.4", features=["rustls", "json"]}
anyhow = {version = "1.0.100"}