[workspace]
members = [
    "crates/common", "crates/explorer", "crates/flp", "crates/indexer", "crates/server",
]

resolver = "2"

[workspace.dependencies]
serde = {version = "1.0.228"}
serde_json = {version = "1.0.0"}
ureq = { version = "3.1.4", features=["rustls", "json"]}
anyhow = {version = "1.0.100"}
csv = {version = "1.4.0"}
dotenvy = {version = "0.15.7"}
toml = {version = "0.8.23"}
