[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
chrono = {version = "0.4.38", features = ["serde"]}
clickhouse = "0.13.0"
common = {path = "../common"}
flp = {path = "../flp"}
futures = "0.3.31"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"]}
