[package]
name = "indexer"
version = "0.4.2"
edition = "2024"
default-run = "indexer"

[dependencies]
anyhow = {workspace = true}
chrono = {version = "0.4.38", features = ["serde"]}
clickhouse = { version = "0.13.0", features = ["chrono"] }
common = {path = "../common"}
flp = {path = "../flp"}
futures = "0.3.31"
rust_decimal = "1.36.0"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
toml = {workspace = true}
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"]}
explorer = { path = "../explorer" }
